// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`maskBoxSource renders 0 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: 0;
  mask-box-source: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: 0;
  mask-box-source: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: 0;
  mask-box-source: 0;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: 0;
  mask-box-source: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders function 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: hasnot;
  mask-box-source: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: has;
  mask-box-source: has;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: hasnot;
  mask-box-source: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: has;
  mask-box-source: has;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders invalid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: invalid.path.1;
  mask-box-source: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: invalid.path.1;
  mask-box-source: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: invalid.path.1;
  mask-box-source: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: invalid.path.1;
  mask-box-source: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders negative number 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: -54881;
  mask-box-source: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: -54881;
  mask-box-source: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: -42365;
  mask-box-source: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: -42365;
  mask-box-source: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: July;
  mask-box-source: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: September;
    mask-box-source: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: July;
  mask-box-source: July;
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: September;
    mask-box-source: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: January;
  mask-box-source: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: December;
    mask-box-source: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: April;
    mask-box-source: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: May;
    mask-box-source: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-source: June;
    mask-box-source: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: January;
  mask-box-source: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: December;
    mask-box-source: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: April;
    mask-box-source: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: May;
    mask-box-source: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-source: June;
    mask-box-source: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: July;
    mask-box-source: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: September;
    mask-box-source: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: July;
    mask-box-source: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: September;
    mask-box-source: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: May;
    mask-box-source: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: June;
    mask-box-source: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: April;
    mask-box-source: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: May;
    mask-box-source: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: June;
    mask-box-source: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    -webkit-mask-box-source: April;
    mask-box-source: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: July;
  mask-box-source: July;
}

@media May {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: September;
    mask-box-source: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: July;
  mask-box-source: July;
}

@media May {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: September;
    mask-box-source: September;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: April;
  mask-box-source: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: January;
    mask-box-source: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-source: December;
    mask-box-source: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: April;
    mask-box-source: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-source: May;
    mask-box-source: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: April;
  mask-box-source: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: January;
    mask-box-source: January;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-source: December;
    mask-box-source: December;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: April;
    mask-box-source: April;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-source: May;
    mask-box-source: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    -webkit-mask-box-source: July;
    mask-box-source: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-source: September;
    mask-box-source: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    -webkit-mask-box-source: July;
    mask-box-source: July;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-source: September;
    mask-box-source: September;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: November;
    mask-box-source: November;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-source: August;
    mask-box-source: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-source: January;
    mask-box-source: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: December;
    mask-box-source: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-source: April;
    mask-box-source: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: May;
    mask-box-source: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-source: June;
    mask-box-source: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    -webkit-mask-box-source: January;
    mask-box-source: January;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: December;
    mask-box-source: December;
  }
}

@media January {
  .c0 {
    -webkit-mask-box-source: April;
    mask-box-source: April;
  }
}

@media April {
  .c0 {
    -webkit-mask-box-source: May;
    mask-box-source: May;
  }
}

@media June {
  .c0 {
    -webkit-mask-box-source: June;
    mask-box-source: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders postitive number 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: 54881;
  mask-box-source: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: 54881;
  mask-box-source: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: 42365;
  mask-box-source: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: 42365;
  mask-box-source: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders string 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: July;
  mask-box-source: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: July;
  mask-box-source: July;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: June;
  mask-box-source: June;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: June;
  mask-box-source: June;
}

<div
    className="c0"
  />,
]
`;

exports[`maskBoxSource renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`maskBoxSource renders valid theme path 1`] = `
Array [
  .c0 {
  -webkit-mask-box-source: DarkSlateBlue;
  mask-box-source: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: DarkSlateBlue;
  mask-box-source: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: DarkSlateBlue;
  mask-box-source: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  -webkit-mask-box-source: DarkSlateBlue;
  mask-box-source: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
